<resources>
    <string name="app_name">EVA13</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="pappass">pAPPas</string>
    <string name="et_cuadrado">Cuadrado</string>
    <string name="et_circulo">Círculo</string>
    <string name="et_rectangulo">Rectángulo</string>
    <string name="et_rombo">Rombo</string>
    <string name="et_titCirculo">Cálculos para un Círculo</string>
    <string name="et_titCuadrado">Cálculos para un Cuadrado</string>
    <string name="et_titRectangulo">Cálculos para un Rectángulo</string>
    <string name="et_titTriangulo">Cálculos para un Triángulo</string>
    <string name="et_titRombo">Cálculos para un Rombo</string>
    <string name="et_subtitulos">Ingrese los datos pedidos para el Cálculo</string>
    <string name="et_area">Obtener el área</string>
    <string name="et_perimetro">Obtener el perímetro</string>
    <string name="et_diagonal">Obtener la diagonal</string>
    <string name="et_semiperimetro">Obtener el semiperímetro</string>
    <string name="ing_radio">Radio:</string>
    <string name="btnCalcular">Calcular</string>
    <string name="resultado">Resultado</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="btnLimpiar">Limpiar</string>
    <string name="lado">Lado:</string>
    <string name="ladoRec1">Lado 1:</string>
    <string name="ladoRec2">Lado 2:</string>
    <string name="Diagonal_mayor">Diag. mayor:</string>
    <string name="diagonal_menor">diag. menor:</string>
    <string name="equilatero">Equilátero</string>
    <string name="isosceles">Isósceles</string>
    <string name="escaleno">Escaleno</string>
    <string name="TengoLaAltura">Tengo la altura</string>
    <string name="seleccionarArea">Seleccionar Area:</string>
    <string name="seleccionarPerimetro">Perímetro:</string>
    <string name="ladoA">Lado A:</string>
    <string name="ladoB">Lado B:</string>
    <string name="ladoC">Lado C:</string>
    <string name="base">Base:</string>
    <string name="altura">Altura:</string>
    <string name="perimetro">Perimetro:</string>
    <string name="area">Área:</string>
    <string name="semiperimetro">Semiperímetro:</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="acerca">Acerca de nosotros</string>
    <string name="nosotros">Nosotros</string>

</resources>
