<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.TrianguloActivity">

    <Button
        android:id="@+id/btn_limpiarTrian"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:onClick="limpiar"
        android:text="@string/btnLimpiar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_resultadoSPTrian" />

    <TextView
        android:id="@+id/et_resultadoPTrian"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <Button
        android:id="@+id/btn_calTriangulo"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:onClick="calcular"
        android:text="@string/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_numTrianB" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/et_titTriangulo"
        app:layout_constraintTop_toBottomOf="@+id/et_titRombo"
        tools:layout_editor_absoluteX="-16dp" />

    <EditText
        android:id="@+id/et_numTrianC"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="110dp"
        android:layout_height="32dp"
        android:text="@string/ladoC"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_GrupoTriangulo" />

    <EditText
        android:id="@+id/et_numTrianA"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/et_numLadoDiag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/et_numTrianB"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/et_numTrianC"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="110dp"
        android:layout_height="32dp"
        android:text="@string/ladoB"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_GrupoTriangulo" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="110dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/ladoA"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_GrupoTriangulo" />

    <RadioGroup
        android:id="@+id/rb_GrupoTriangulo"
        android:layout_width="168dp"
        android:layout_height="164dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/rb_equilatero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equilatero" />

        <RadioButton
            android:id="@+id/rb_isosceles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isosceles" />

        <RadioButton
            android:id="@+id/rb_escaleno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/escaleno" />

        <RadioButton
            android:id="@+id/rb_tengoLaAltura"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:text="@string/TengoLaAltura" />

        <RadioButton
            android:id="@+id/rb_perimetroTrian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/et_perimetro" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="165dp"
        android:layout_height="27dp"
        android:text="@string/seleccionarArea"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/et_dato3"
        android:layout_width="100dp"
        android:layout_height="27dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/base"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/et_dato1"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/et_dato1"
        android:layout_width="100dp"
        android:layout_height="27dp"
        android:layout_marginEnd="108dp"
        android:layout_marginRight="108dp"
        android:text="@string/base"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/rb_GrupoTriangulo"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/et_numTrian1"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="108dp"
        android:layout_marginRight="108dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rb_GrupoTriangulo"
        app:layout_constraintTop_toBottomOf="@+id/et_dato1" />

    <EditText
        android:id="@+id/et_numTrian3"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/et_numTrian1"
        app:layout_constraintTop_toBottomOf="@+id/et_dato3" />

    <EditText
        android:id="@+id/et_numTrian2"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginEnd="108dp"
        android:layout_marginRight="108dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rb_GrupoTriangulo"
        app:layout_constraintTop_toBottomOf="@+id/et_dato2" />

    <TextView
        android:id="@+id/et_dato2"
        android:layout_width="100dp"
        android:layout_height="27dp"
        android:layout_marginEnd="108dp"
        android:layout_marginRight="108dp"
        android:text="@string/altura"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rb_GrupoTriangulo"
        app:layout_constraintTop_toBottomOf="@+id/et_numTrian1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_titTriangulo"
        app:srcCompat="@drawable/triangulo" />

    <TextView
        android:id="@+id/et_titTriangulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/et_titTriangulo"
        android:textSize="24sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/et_titTriangulo"
        app:layout_constraintTop_toBottomOf="@+id/et_titRombo"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="135dp"
        android:layout_height="25dp"
        android:text="@string/perimetro"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_calTriangulo" />

    <TextView
        android:id="@+id/et_resultadoSPTrian"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/et_resultadoATrian"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/et_resultadoPTrian"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/et_resultadoATrian"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="135dp"
        android:layout_height="25dp"
        android:text="@string/semiperimetro"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/btn_calTriangulo" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="135dp"
        android:layout_height="25dp"
        android:text="@string/area"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/textView17" />

</android.support.constraint.ConstraintLayout>